SigmaCodebackup3rdSep/objects/Stock_In_Product__c.object
<CustomObject>
    <fields>
        <fullName>Available_quantity__c</fullName>
        <label>Available quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bin</label>
        <referenceTo>Sublevel_location__c</referenceTo>
        <relationshipLabel>Stock Receiving Products</relationshipLabel>
        <relationshipName>Stock_Receiving_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Convert_Quantity__c</fullName>
        <label>Convert Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Individual_Distribution_Status__c</fullName>
        <label>Individual Distribution Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Inventory_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location</label>
        <referenceTo>Inventory_Location__c</referenceTo>
        <relationshipLabel>Stock Receiving Products</relationshipLabel>
        <relationshipName>Stock_Receiving_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>Stock_In__r.Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>temporary Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lot</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Purchase_Order__c</field>
                <operation>notEqual</operation>
                <value>null</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Lot__c</referenceTo>
        <relationshipLabel>Stock Receiving Products</relationshipLabel>
        <relationshipName>Stock_Receiving_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stock Receiving Products (Merchant Account)</relationshipLabel>
        <relationshipName>Stock_In_Products2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Quantity__c</fullName>
        <label>Net Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Stock Receiving Products</relationshipLabel>
        <relationshipName>Stock_Receiving_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stock Receiving Products (Parent Account)</relationshipLabel>
        <relationshipName>Stock_In_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Serial_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Serial Number</label>
        <referenceTo>Product_Serial_Number__c</referenceTo>
        <relationshipLabel>Stock Receiving Products</relationshipLabel>
        <relationshipName>Stock_Receiving_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Stock Receiving Products</relationshipLabel>
        <relationshipName>Stock_Receiving_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pur_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Stock Receiving Products (Purchase Order)</relationshipLabel>
        <relationshipName>Stock_Receiving_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order Product</label>
        <referenceTo>Purchase_Order_Product__c</referenceTo>
        <relationshipLabel>Stock Receiving Products</relationshipLabel>
        <relationshipName>Stock_In_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Putaway_location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Actual Location</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stock Receiving Products</relationshipLabel>
        <relationshipName>Stock_Receiving_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity_Received__c</fullName>
        <label>Quantity Received</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receive_Location__c</fullName>
        <formula>Putaway_location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Received Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Quantity__c</fullName>
        <formula>Purchase_Order__r.Received_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Split__c</fullName>
        <label>Remaining Split</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Return_Quantity_Comment__c</fullName>
        <label>Return Quantity Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Returned_Quantity__c</fullName>
        <label>Returned Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stock_In__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock In</label>
        <referenceTo>Stock_In__c</referenceTo>
        <relationshipLabel>Stock Receiving Products</relationshipLabel>
        <relationshipName>Stock_In_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted_Individuals__c</fullName>
        <label>Submitted Individuals</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stock Receiving Products (To Location)</relationshipLabel>
        <relationshipName>Stock_Receiving_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Email__c</fullName>
        <label>Vendor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <formula>Stock_In__r.Vendor__r.Name</formula>
        <label>Vendor</label>
        <type>Text</type>
    </fields>
    <label>Stock Receiving Product</label>
    <nameField>
        <displayFormat>SIP-{0000}</displayFormat>
        <label>Stock In Products Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Receiving Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_stock_in_product_quantity</fullName>
        <active>false</active>
        <errorConditionFormula>Available_quantity__c &lt; 0</errorConditionFormula>
        <errorMessage>Quantity Exceeded</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quantity_matching</fullName>
        <active>false</active>
        <errorConditionFormula>Purchase_Order__r.Received_Quantity__c &lt; Quantity_Received__c</errorConditionFormula>
        <errorMessage>Quantity Received exceeds quantity Ordered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Received_Quantity_should_be_positive</fullName>
        <active>false</active>
        <errorConditionFormula>Quantity_Received__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Returned_Quantity__c</errorDisplayField>
        <errorMessage>Quantity received is incorrect.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Returned_Quantity_sholud_be_greater_than</fullName>
        <active>false</active>
        <errorConditionFormula>Returned_Quantity__c &lt; 0</errorConditionFormula>
        <errorMessage>Received Quantity is incorrect.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verified_Products</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED( Quantity_Received__c)  &amp;&amp;    
ISPICKVAL( Status__c , &quot;Verified&quot;) &amp;&amp;  NOT(ISNEW())</errorConditionFormula>
        <errorMessage>This Product is already Verified.</errorMessage>
    </validationRules>
</CustomObject>